<resources>
    <string name="app_name">Study With Me</string>
    <string name="app_continue">CONTINUE</string>
    <string name="pag_unawa_sa_wika_at_panitikan">PAG-UNAWA SA WIKA AT PANITIKAN</string>
    <string name="description_one">Naglalayong palalimin ang kaalaman ng mga mag-aaral sa Filipino. Ito ay kinabibilangan ng pagsasanay sa gramatika, pagpapalawak ng bokabularyo, pagkilala sa wastong paggamit ng mga pangungusap, at pagsusuri sa mga tekstong pampanitikan.</string>
    <string name="description_two">Ang panitikan ay may malalim na kahalagahan sa lipunan. Ito\'y nagpapahayag ng kultura, kasaysayan, at karanasan ng isang bansa. Nagbibigay ito ng pagkakakilanlan, pagpapahalaga sa wika, at pag-unawa sa iba\'t ibang perspektiba.</string>
    <string name="question_one">ANO ANG PANITIKAN?</string>
    <string name="check">check</string>
    <string name="choices_one">A. Ang panitikan naglalayong gumawa ng isang dekadang bokabularyo</string>
    <string name="choices_two">B. Ang panitikan ay may malalim na kahalagahan sa lipunan</string>
    <string name="choices_three">C. Ang panitikan ay karanasan ni Dr. Jose Rizal</string>
    <string name="choices_four">D. ng panitikan ay pag unawa sa mga mamamayan</string>
    <string name="pasalaysay">Pasalaysay</string>
    <string name="pasalaysay_description">Ito ay pangungusap na nagkukuwento o nagsasalaysay. Ito ay nag tatapos sa tuldok(.)</string>
    <string name="halimbawa">Halimbawa</string>
    <string name="halimbawa_description">Si Juan ay tumatakbo.</string>
    <string name="halimbawa_description_two">Mga bata ay nag tatanim ng mga halaman</string>
    <string name="mga_uri_ng_pangungusap">MGA URI NG PANGUNGUSAP</string>
    <string name="patanong">Patanong</string>
    <string name="patanong_description">Ito ay uri ng pangungusap na nagsasaad ng isang tanong. Ito ay nag tatapos sa tandang pananong (?).</string>
    <string name="halimbawa_description_three">Anak ano ang iyong binili sa tindahan?</string>
    <string name="halimbawa_four">Saan ka pupunta pagkatapos natin kumain?</string>
    <string name="piliin_ang_pasalaysay_sa_mga_sumusunod">Piliin ang PASALAYSAY sa mga sumusunod</string>
    <string name="second_choice_one">A. Maari mo bang akong pahiramin ng iyong lapis?</string>
    <string name="second_choice_two">B. Saan kayo pumunta ngayong bakasyon?</string>
    <string name="second_choice_three">C. Naku! Nakalimutan ko ang aking aklat</string>
    <string name="second_choice_four">D. Ang mga bata ay naglalaro sa labas ng bahay.</string>
    <string name="piliin_ang_patanong_sa_mga_sumusunod">Piliin ang PATANONG sa mga sumusunod</string>
    <string name="piliin_ang_pautos_sa_mga_sumusunod">Piliin ang PAUTOS sa mga sumusunod</string>
    <string name="piliin_ang_padamdam_sa_mga_sumusunod">Piliin ang PADAMDAM sa mga sumusunod</string>
    <string name="pautos">Pautos</string>
    <string name="pautos_description">Ito ay uri ng pangungusap na ginagamitan magagalang na salita upang makiusap. Maari itong nag tatapos sa tuldok(.) o sa tandang pananong (?).</string>
    <string name="halimbawa_five">Maari mo bang diligan ang halaman?</string>
    <string name="halimbawa_six">Saan ka pupunta pagkatapos natin kumain?</string>
    <string name="padamdam">Padamdam</string>
    <string name="padamdam_description">Ito ay uri ng pangungusap na nagsasaad ng matinding damdamin tulad ng tuwa, takot o pagkagulat. Nagtatapos ito sa tandang panamdam(!).</string>
    <string name="halimbawa_seven">Aray! Ang sakit ng aking tuhod ko.</string>
    <string name="halimbawa_nine">Naku! Ang bata ay nalulunod.</string>
    <string name="time">05:00 min</string>
    <string name="number_of_question">Question: 5</string>
    <string name="overview" style="@style/SubjectContent">Overview</string>
    <string name="lessons" style="@style/SubjectContent">Lessons</string>
    <string name="similar_subjects" style="@style/SubjectContent">Similar Subjects</string>
    <string name="filipino_subject">Filipino Subject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_lessons_fragment">LessonsFragment</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="tayutay">Ang tayutay ay mga pahayag o pagpapahayag sa pamamagitan ng mga di-karaniwang paggamit ng wika upang bigyan diin, kahulugan, o kulay sa isang teksto.</string>
    <string name="science_subject">Science Subject</string>
    <string name="english_subject">English Subject</string>
    <string name="math_subject">Math Subject</string>
    <string name="history_subject">History Subject</string>
    <string name="cell_membrane_cytoplasmm_nucleus_mitochondria">Cell-Membrane, Cytoplasmm Nucleus, Mitochondria</string>
    <string name="hello_world">Hello world hello world hello world 1 2 3 4 5</string>
    <string name="description">Enter Description</string>
    <string name="my_notes">My Notes</string>
    <string name="date">Jan 1, 2021</string>
    <string name="my_descrption">My long descrption</string>
    <string name="my_title">My Title</string>
    <string name="Enter_Title">Enter Title</string>
    <string name="add_note">Add note</string>
    <string name="save">Save</string>
    <string name="edit_note">Edit Note</string>
    <string name="edit_title">Edit Title</string>
    <string name="edit_description">Edit Description</string>
    <string name="do_nothing">Do Nothing</string>
    <string name="are_you_sure_you_want_to_delete_this_note">Are you sure you want to delete this note?</string>
    <string name="yes">Continue</string>
    <string name="cancel">Cancel</string>
    <string name="warning">Warning</string>
    <string name="todo">TODO</string>
    <string name="are_you_sure_about_that">Are You Sure About That</string>
</resources>