<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cvBackground"
    tools:context=".NoteEdit">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:paddingStart="50dp"
        android:text="@string/edit_note"
        android:textColor="@color/pureBlack"
        android:textSize="20sp"
        android:fontFamily="@font/montserrat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="RtlSymmetry" />

    <ImageView
        android:id="@+id/btn_noteUp_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/save"
        app:layout_constraintBottom_toTopOf="@+id/et_noteUp_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_check_24" />

    <ImageView
        android:id="@+id/btn_noteUp_return"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/save"
        app:layout_constraintBottom_toTopOf="@+id/et_noteUp_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_keyboard_arrow_left_24" />

    <EditText
        android:id="@+id/et_noteUp_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:background="@drawable/orange_border"
        android:fontFamily="@font/montserrat"
        android:gravity="center|start"
        android:hint="@string/edit_title"
        android:inputType="text"
        android:padding="20dp"
        android:textColor="@color/pureBlack"
        android:textColorHint="@color/grayblack"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/et_noteUp_description"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:autofillHints=""
        android:layout_margin="10dp"
        android:background="@drawable/orange_border"
        android:fontFamily="@font/montserrat"
        android:gravity="start"
        android:hint="@string/edit_description"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:textColor="@color/pureBlack"
        android:textColorHint="@color/grayblack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_noteUp_title" />
</androidx.constraintlayout.widget.ConstraintLayout>